# EasyASM-UI-RS

./: Cargo.toml  build.rs
PicoBlaze/: Language_Specification.yaml
PicoBlaze/LanguageInstructionLib/: Lib.lua
PicoBlaze/LanguageInstructionLib/Ops/: C.lua  D.lua  J.lua  T.lua  X.lua
compiler_backend/PicoBlaze/LanguageInstructionLib/: EventFunctions.lua  GenerateOutput.lua  Linker.lua  NonInstruction.lua
compiler_backend/PicoBlaze/LanguageInstructionLib/Ops/: A.lua  Address.lua  Constant.lua  E.lua  F.lua  I.lua  L.lua  Namereg.lua  O.lua  R.lua  S.lua  Util.lua
src/: main.rs
src/components/: file_selector.rs  mod.rs
