[package]
name = "EasyASM-UI-RS"
version = "1.0.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "svg", "highlighter", "tokio", "debug"] }
tokio = { version = "1.28", features = ["full"] }
rfd = "0.15.4"

#iced.workspace = true
#iced.features = []
#
#tokio.workspace = true
#tokio.features = ["fs"]
